Merge major refactoring patch: Modularize TrikeShed architecture - Remove foundational components for kernel migration - Update project structure to Trikeshed-Monorepo - Add new NIO and reflection platform abstractions - Update documentation to reflect new modular architecture